login and signup working

--- a/templates_global/homepage.html
+++ b/templates_global/homepage.html
@@ -29,7 +29,7 @@
             </div>
             <div class="wrap-login100 p-l-40 p-r-40 p-t-40 p-b-40">
                 <div class="login100-form-bgbtn">
-                    <button class="login100-form-bgbtn">
+                    <button class="login100-form-bgbtn" href="{% url 'accounts:login' %">
                     Login</button>
                     <button class="login100-form-bgbtn">
                         Sign-up
