--- a/templates_global/home.html
+++ b/templates_global/home.html
@@ -1,11 +1,52 @@
-{% extends "base.html" %} 
-{% load static %} 
+{% extends "base.html" %}
+{% load static %}
 {% comment %} {% endcomment %}
 {% block title %}
 <title>Login</title>
 {% endblock title %}
+{%block imports %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<!--===============================================================================================-->
+<!--===============================================================================================-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+<!--===============================================================================================-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" type="text/css" href="{% static 'styles/util.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/homepage.css' %}">
+{%endblock imports %}
 
 {% block body %}
+<div class="wrapper">
+        
+    <div class="container-login100" >
+        <div class="logo">
+            <h1>Samajik Network</h1>
+        </div>
+        <div class="wrap-login100 p-l-40 p-r-40 p-t-40 p-b-40">
+            {% if user.is_authenticated %}
+            {% else %}
+            <div class="login100-form-bgbtn">
+                <a href="{% url 'login' %}" style="text-decoration: none;">
+                <button class="login100-form-bgbtn">
+                    Login</button>
+                </a>
+                <a href="{% url 'signup' %}" style="text-decoration: none;">
+                <button class="login100-form-bgbtn">
+                    Sign-up
+                </button>
+                </a>		
+            </div>
+            {%endif%}
+        </div>
+</div>
+</div>
 
-    <b>This will be the home page!</b>
 {%endblock body %}
